@@ -99,18 +99,22 @@ Class('JooseX.CPS.Continuation', {
             Joose.A.each(statements, function (statement, index) {
                 
                 me.deriveChild().TRY(statement.func, statement.scope, statement.args || args).THEN(function () {
+                    
                     counter++
-                    results[index] = arguments
+                    results[ index ] = arguments
                     
                     this.CONT.CONTINUE()
+                    
                 }).CATCH(function () {
+                    
                     counter++
-                    results[index] = arguments
+                    results[ index ] = arguments
                     
                     this.CONT.CONTINUE()
+                    
                 }).FINALLY(function () {
                         
-                    if (counter == length) me.leave(results)
+                    if (counter == length) me.leave.apply(me, results)
                 }).NOW()
             })
         },
