@@ -75,7 +75,7 @@ StartTest(function(t) {
             CONT.CONTINUE('value3')
         }, 0)
         
-    }).THEN(function (results) {
+    }).THEN(function () {
         
         t.pass('THEN was reached')
         
@@ -85,11 +85,11 @@ StartTest(function(t) {
         t.ok(!thenReached, "THEN wasn't reached yet")
         
         
-        t.ok(results instanceof Array && results.length == 3, 'Seems we have correct results')
+        t.ok(arguments.length == 3, 'Seems we have correct results')
         
-        t.ok(results[0][0] == 'value1', 'Indeed 1')
-        t.ok(results[1][0] == 'value2', 'Indeed 2')
-        t.ok(results[2][0] == 'value3', 'Indeed 3')
+        t.ok(arguments[0][0] == 'value1', 'Indeed 1')
+        t.ok(arguments[1][0] == 'value2', 'Indeed 2')
+        t.ok(arguments[2][0] == 'value3', 'Indeed 3')
         
         
         t.endAsync(async1)
